--- a/VRChat/55/1090455.html
+++ b/VRChat/55/1090455.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1090455">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="UA-187635890-1">
+    <meta name="ga:shop" content="G-J1ZTKT1KBJ">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -102,7 +102,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "lxoMPs7ndP1fmdQOEzxg2AQlB4lqUQaBOWn+Dkngo2k="></script>
+    "sOt/Sem4seqkE6ek90pMpS0P1s0X9BU1umlwDF4hgDY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】打刀（合計△1086ポリゴン）","description":"打刀、オリジナル3Dモデルです。\nVRChatなどでの使用を想定して制作しました。\n全体で△1086ポリゴンなので扱いやすいと思います。\n\nメッシュは5個に分かれています。\n・刀身△110ポリゴン\n・鍔△428ポリゴン\n・柄△40ポリゴン\n・鞘△236ポリゴン\n・下緒△272ポリゴン\n\n設定次第で鞘を腰に残したまま抜刀することもできます。\n\nVRChatでこの3Dモデルを使うときにできる、抜刀時の設定の一例を書いておきます。\n１．腰に刀と鞘を装備します。\n２．手に刀のみを持ち、非表示にしておきます。\n３．アニメーションで腰の刀部分を非表示にします。\n４．同時に手に持った刀を表示させます。\n５．そのまま好きなように動きます。\n\n利き手と反対の手で鞘を持っても良さそうです。\n\n※アニメーションファイルや詳細な設定方法は、今回のファイルに含まれません。\n※コントローラーや部屋の物を壊さないようご注意ください。\n\n---------------------------------------------------------------\nファイルの中身\n・KATANA.unitypackage\n・Uchigatana.fbx\n・texture（Albedo、Metallic、Normal）各1枚\n\ntextureファイルは解像度1024で制作しました。\n各1枚にまとめてあります。\nマテリアルは5個、別々に設定しました。\n個別に色の変更や質感調整もできます。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\nwakamaru shop","url":"https://booth.pm/ja/items/1090455","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1090455/a26d8b78-dc8a-4f9b-94fd-d293c89f3973_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lxoMPs7ndP1fmdQOEzxg2AQlB4lqUQaBOWn+Dkngo2k="></script>
+    nonce="sOt/Sem4seqkE6ek90pMpS0P1s0X9BU1umlwDF4hgDY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -124,7 +124,7 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id="UA-187635890-1"
+        <div class="market" data-ga-tracking-id="G-J1ZTKT1KBJ"
         data-product-brand="wakamaru" data-product-category="210"
         data-product-id="1090455" data-product-list="market_show"
         data-product-price="300"
@@ -262,7 +262,7 @@
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
                                         data-ga-tracking-id=
-                                        "UA-187635890-1" type=
+                                        "G-J1ZTKT1KBJ" type=
                                         "submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
@@ -295,7 +295,7 @@
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
                                           data-ga-tracking-id=
-                                          "UA-187635890-1" type=
+                                          "G-J1ZTKT1KBJ" type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
